Update on thesis. Mainly on abstrace and CHP 1.

--- a/edwin_2019/A4-MEMBERLIST.tex
+++ b/edwin_2019/A4-MEMBERLIST.tex
@@ -12,15 +12,19 @@ $$\\ \\ \\ $$
 	\def\titleProfB{***}
 	\def\nameProfC{***}
 	\def\titleProfC{***}
-	\def\affiliation{******}
+	\def\affiliationA{******}
+	\def\affiliationB{******}
+	\def\affiliationC{******}
 \else
-	\def\nameProfA{A}
+	\def\nameProfA{柳银萍}
 	\def\titleProfA{教授}
-	\def\nameProfB{B}
+	\def\nameProfB{	章炯民}
 	\def\titleProfB{副教授}
-	\def\nameProfC{C}
+	\def\nameProfC{谢瑾奎}
 	\def\titleProfC{副教授}
-	\def\affiliation{华东师范大学}
+	\def\affiliationA{华东师范大学数学科学学院}
+	\def\affiliationB{华东师范大学计算机科学与技术学院}
+	\def\affiliationC{华东师范大学计算机科学与技术学院}
 \fi
 
 \begin{center}\large
@@ -28,11 +32,11 @@ $$\\ \\ \\ $$
 		\hline
 		\heiti  姓名 &\heiti  职称&\heiti  单位&\heiti  备注 \\
 		\hline
-		\nameProfA & \titleProfA & \affiliation &  主席 \\
+		\nameProfA & \titleProfA & \affiliationA &  主席 \\
 		\hline
-		\nameProfB & \titleProfB & \affiliation & \\
+		\nameProfB & \titleProfB & \affiliationB & \\
 		\hline
-		\nameProfC & \titleProfC & \affiliation & \\
+		\nameProfC & \titleProfC & \affiliationC & \\
 		\hline
 	\end{tabular}
 \end{center}
