--- a/edwin_2019/D2-MYACHIEVEMENTS.tex
+++ b/edwin_2019/D2-MYACHIEVEMENTS.tex
@@ -1,8 +1,13 @@
 \phantomsection\addcontentsline{toc}{chapter}{\small{攻读学位期间发表的学术论文}}
 \chapter*{攻读学位期间发表的学术论文}
 
-%{\heiti $\blacksquare$ 已公开发表论文}\vskip 5mm
 
-\begin{enumerate}
-	\item Chongbin Tang, Sen Chen, Lingling Fan, Lihua Xu, Yang Liu, Zhushou Tang, and Liang Dou, ``A large-scale empirical study on industrial fake apps,'' in \textit{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Practice,} IEEE Press, 2019: 183-192. (发表于CCF A类推荐学术会议, 软件工程方向顶级会议ICSE2019)
-\end{enumerate}
+\ifdefined \anonymous
+	\begin{enumerate}
+		\item ******** ****, *** ****, ******** ***, ***** **, **** ***, ******* ****, and ***** ***, ``A large-scale empirical study on industrial fake apps,'' in \textit{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Practice,} IEEE Press, 2019: 183-192. (第一作者，发表于CCF A类推荐学术会议, 软件工程方向顶级会议ICSE2019)
+	\end{enumerate}
+\else
+	\begin{enumerate}
+		\item Chongbin Tang, Sen Chen, Lingling Fan, Lihua Xu, Yang Liu, Zhushou Tang, and Liang Dou, ``A large-scale empirical study on industrial fake apps,'' in \textit{Proceedings of the 41st International Conference on Software Engineering: Software Engineering in Practice,} IEEE Press, 2019: 183-192. (第一作者，发表于CCF A类推荐学术会议, 软件工程方向顶级会议ICSE2019)
+	\end{enumerate}
+\fi
