--- a/edwin_2019/D3-ACKNOWLEDGEMENT.tex
+++ b/edwin_2019/D3-ACKNOWLEDGEMENT.tex
@@ -8,7 +8,7 @@
 首先、也是最想感谢的是我的导师徐立华教授。
 徐老师学风严谨，逻辑清晰，总是会耐心细致地给予学生各方面的指引关怀，更从不吝向学生分享各种资源。
 她给予我的，是学术上的引导，也是人生路上的指点。
-此外，感谢贺樑教授和窦亮老师在本文写作期间给我的指导与建议；感谢犇众信息的唐祝寿老师带我走近业界；感谢凯斯西储大学的肖旭生教授给予我学术访问的机会；也感谢各位曾给我授课或予我关怀的各位老师，你们的言传身教将会成为我宝贵的精神财富。
+此外，感谢贺樑教授在本文写作期间给我的指导与建议；感谢犇众信息的唐祝寿老师带我走近业界；感谢凯斯西储大学的肖旭生教授给予我学术访问的机会；也感谢各位曾给我授课或予我关怀的各位老师，你们的言传身教将会成为我宝贵的精神财富。
 
 身边的各位同学也在各方面给了我很大的帮助。
 感谢陈森、范玲玲两位博士带我完成了关于仿冒应用的研究。
@@ -24,7 +24,7 @@
 回首师大求学时光，当真如梦似幻。
 七岁流转，纵有遗憾，但更多的是快乐与美好。
 丽娃河上的点点碎金，樱桃河畔的轻风拂柳，都已深深地刻入我的记忆。
-未来人生路长，愿能铭记``求实创造，为人师表''的格言，勤勤恳恳，不负韶华，更不负诸位照耀过我的光。
+未来人生路长，惟愿铭记``求实创造，为人师表''的格言，勤勤恳恳，不负韶华，更不负诸位照耀过我的光。
 
 \rightline{唐崇斌}
 \rightline{二〇二〇年三月}
