--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -106,6 +106,15 @@
 }
 
 % Edwin
+@inproceedings{tang2019large,
+  title={A large-scale empirical study on industrial fake apps},
+  author={Tang, Chongbin and Chen, Sen and Fan, Lingling and Xu, Lihua and Liu, Yang and Tang, Zhushou and Dou, Liang},
+  booktitle={2019 IEEE/ACM 41st International Conference on Software Engineering: Software Engineering in Practice (ICSE-SEIP)},
+  pages={183--192},
+  year={2019},
+  organization={IEEE}
+}
+
 @article{chen2018automated,
 	title={Automated poisoning attacks and defenses in malware detection systems: An adversarial machine learning approach},
 	author={Chen, Sen and Xue, Minhui and Fan, Lingling and Hao, Shuang and Xu, Lihua and Zhu, Haojin and Li, Bo},
@@ -538,4 +547,60 @@
   booktitle={Presented as part of the 22nd $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 13)},
   pages={527--542},
   year={2013}
+}
+
+# Empirical studies
+@inproceedings{manotas2016empirical,
+  title={An empirical study of practitioners' perspectives on green software engineering},
+  author={Manotas, Irene and Bird, Christian and Zhang, Rui and Shepherd, David and Jaspan, Ciera and Sadowski, Caitlin and Pollock, Lori and Clause, James},
+  booktitle={2016 IEEE/ACM 38th International Conference on Software Engineering (ICSE)},
+  pages={237--248},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{mcintosh2016empirical,
+  title={An empirical study of the impact of modern code review practices on software quality},
+  author={McIntosh, Shane and Kamei, Yasutaka and Adams, Bram and Hassan, Ahmed E},
+  journal={Empirical Software Engineering},
+  volume={21},
+  number={5},
+  pages={2146--2189},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{mcilroy2016fresh,
+  title={Fresh apps: an empirical study of frequently-updated mobile apps in the Google play store},
+  author={McIlroy, Stuart and Ali, Nasir and Hassan, Ahmed E},
+  journal={Empirical Software Engineering},
+  volume={21},
+  number={3},
+  pages={1346--1370},
+  year={2016},
+  publisher={Springer}
+}
+
+@incollection{easterbrook2008selecting,
+  title={Selecting empirical methods for software engineering research},
+  author={Easterbrook, Steve and Singer, Janice and Storey, Margaret-Anne and Damian, Daniela},
+  booktitle={Guide to advanced empirical software engineering},
+  pages={285--311},
+  year={2008},
+  publisher={Springer}
+}
+
+Empirical studies in China
+@phdthesis{wu2016ji,
+  title={基于开源软件的C++关键语言特性实证研究},
+  author={吴迪},
+  year={2016},
+  school={南京大学}
+}
+
+@phdthesis{yang2015xin,
+  title={信息安全风险分析方法与风险感知实证研究},
+  author={杨姗媛},
+  year={2015},
+  school={中央财经大学}
 }
