--- a/edwin_2019/chapter-feedback.tex
+++ b/edwin_2019/chapter-feedback.tex
@@ -1,6 +1,10 @@
 \chapter{面向仿冒应用的排名欺诈验证方法}
 \label{chp:feedback}
 
+上一章的研究对仿冒应用进行了全方位的特征解读。
+进一步地，为了解仿冒应用与另一个移动黑灰产环节---排名欺诈的关系，本文搜集了应用评论数据，并采用两种新方法以进行排查。
+本章呈现了相关研究的细节。
+
 \section{研究概况}
 应用市场中的用户反馈区是Android应用生态的重要部分，热心用户会在评论区提出反馈，黑灰产从业者则会利用排名欺诈的手段牟取利益。
 为了进一步了解仿冒应用的生态，本章针对仿冒应用与排名欺诈是否存在关联进行了研究。
@@ -14,17 +18,17 @@ AppWatcher~\cite{xie2015appwatcher}提出的迭代算法需要采用已知存在
 
 
 \section{仿冒评论数据收集}
-由于Janus平台上并不提供评论数据，\mytool 的爬虫模块也只支持应用爬取，所以笔者另外在应用市场上重新收集了评论数据。
-在\texttt{360手机助手}应用商店中，笔者随机挑选了856个应用，爬取了这些应用的APK包和对应的所有历史评论。
-之后，笔者将上一次数据收集时保存的正版应用的信息重新导入\mytool，从新收集的应用中筛选出了对应仿冒应用。
+由于Janus平台上并不提供评论数据，\mytool 的爬虫模块也只支持应用爬取，所以本研究另外在应用市场上重新收集了评论数据。
+在\texttt{360手机助手}应用商店中，本研究随机挑选了856个应用，爬取了这些应用的APK包和对应的所有历史评论。
+之后，本研究将上一次数据收集时保存的正版应用的信息重新导入\mytool，从新收集的应用中筛选出了对应仿冒应用。
 
 每条评论都会附带一个评价分数，某款App在市场上的平均评价就是所有评论评分的均值。
-对于每条评论信息，笔者能收集到的数据项是：\texttt{应用包名}、\texttt{用户ID}、\texttt{评论内容}、\texttt{评分}和\texttt{评论日期}共五项。
+对于每条评论信息，本研究能收集到的数据项是：\texttt{应用包名}、\texttt{用户ID}、\texttt{评论内容}、\texttt{评分}和\texttt{评论日期}共五项。
 
 \subsection{评论数据概览}
-在笔者收集评论的所有856个应用中，有6款应用与先前仿冒应用数据中的包名对应。
-要注意的是，由于本研究的仿冒应用列表为针对50个热度最高的目标App整理而成，而收集评论的应用是在整个市场范围内随机挑选的，所以这里的仿冒应用占总体应用比例较小。但这不意味着整个市场中就只有这几款应用是仿冒应用。
-另外，由于这856个应用是随机挑选的，笔者认为这批数据具有一定的代表性，可以应以反映整个市场的评论分布情况。
+在本研究收集评论的所有856个应用中，有6款应用与先前仿冒应用数据中的包名对应。
+要注意的是，由于本研究的仿冒应用列表为针对50个热度最高的目标应用整理而成，而收集评论的应用是在整个市场范围内随机挑选的，所以这里的仿冒应用占总体应用比例较小。但这不意味着整个市场中就只有这几款应用是仿冒应用。
+另外，由于这856个应用是随机挑选的，本研究认为这批数据具有一定的代表性，可以应以反映整个市场的评论分布情况。
 本次研究一共爬取到了267,397名用户的365,461条评论，其中6款仿冒应用的所有历史评论共计3,591条，来自2,946名用户。
 
 \subsection{基础分析}
@@ -75,8 +79,8 @@ AppWatcher~\cite{xie2015appwatcher}提出的迭代算法需要采用已知存在
 以下是一些热门应用的评分和这些仿冒应用的评分的对比：
 在同一市场下，移动购物类应用\texttt{淘宝}的评分为4.55分，近年十分受欢迎的短视频应用\texttt{抖音}平均评价是4.5分，游戏类应用\texttt{开心消消乐}的评分是3.65分，而\texttt{微信}的平均评价更是只有3.45分。
 上述应用毫无疑问都是十分优质的App，庞大的用户基数带来的大量真实评价会使得平均评价较为稳定，不会因为在短时间内收到少量好评或者差评就产生较大的评价波动。
-在\texttt{淘宝}等应用作为基准的情况下，6款仿冒应用的评分之高不禁令笔者想到恶意刷评的相关研究。
-然而，笔者不能仅凭几个应用的平均评价对比就咬定仿冒应用存在刷好评的行为。
+在\texttt{淘宝}等应用作为基准的情况下，6款仿冒应用的评分之高不禁令人联想到恶意刷评的相关研究。
+然而，本研究不能仅凭几个应用的平均评价对比就咬定仿冒应用存在刷好评的行为。
 因此，本文先分析数据集的整体分布，再作进一步比较。
 
 在不考虑上述提到的恶意刷评的情况下，一款应用的使用人数越多，就越有可能收到来自用户的评价。
@@ -125,26 +129,26 @@ AppWatcher~\cite{xie2015appwatcher}提出的迭代算法需要采用已知存在
 再回望\texttt{淘宝}、\texttt{微信}等应用的评分，两者之间似乎有了矛盾。
 一款应用的用户越多，真实的评论数目越大，该款应用的评分就会趋向客观，直到收敛到一个可以反映应用质量的真实水平。
 \emph{com.jhwl.fjxa}、\emph{com.arsenal.FunWeather}、\emph{com.sscwap}三款应用的用户量固然不能和\texttt{微信}、\texttt{淘宝}相比，但成百上千的评论数也暗示着一个不小的用户群体。
-在用户群体有一定规模的情况下，还能保持高水平的平均评价并不容易，因此需要验证上述应用是否利用了排名欺诈将评分拉高。
+在用户群体有一定规模的情况下，还能保持高水平的平均评价并不容易，因此本文假设上述应用利用了排名欺诈手段将评分拉高，并将在后续章节对此假设进行验证。
 
 \section{仿冒应用与排名欺诈关联验证}
 
 \subsection{排名欺诈检测初探}
 
-由于前文提及的两项排名欺诈检测研究分别需要先验知识与特殊数据，而现有数据中并不具备这些条件，所以本研究选择了另一前人研究的方法进行探索。
-\texttt{FRAUDAR}~\cite{hooi2016fraudar}是Bryan Hooi在2016年推出的一个算法，可以使用二分图挖掘的方法找出可能的虚假好评，并输出最可能涉及排名欺诈的应用和用户。
+由于前文提及的两项排名欺诈检测研究分别需要先验知识与特殊数据，而现有数据中并不具备这些条件，所以本研究先选择了另一前人研究的方法进行探索。
+\texttt{FRAUDAR}~\cite{hooi2016fraudar}是Bryan Hooi在2016年提出的算法，使用二分图挖掘的方法找出可能的虚假好评，并输出最可能涉及排名欺诈的应用和用户。
 算法基于的假设是，普通用户的行为（在本文中即为对App评论的行为）是大致随机的，而用于进行排名欺诈的用户群的行为却会有比较明显的指向性（即针对购买了排名欺诈服务的App发送好评），而且为了将平均评分拉高，就意味着需要发送大量好评。
 如果将用户和App分别看做两种不同节点，每条好评看作是两种节点之间的边，那么在这张用户-评论-应用图中，排名欺诈用户和对应的App之间就会有特别紧密的联系。
 如果能把这个联系特别紧密的子图找到，就有可能从中找到真实的排名欺诈用户和应用。
 
 由于此处的排名欺诈指用大量虚假好评刷高应用的平均评价，所以在寻找排名欺诈用户和对应应用时，应该只采用满分好评作为数据。
 因此，本研究从所有评论中筛选出了满分好评，其总数为381,507条，由229,100名用户给出，分布于848个应用中，占评论总数的87.15\%。
-笔者将\texttt{FRAUDAR}应用在了本研究的好评数据集上，找到了115名可疑用户和13个可疑应用。
-经过比对后，笔者发现，13个可疑应用并不包含仿冒样本，而仿冒应用的所有评论条目中也没有源于那115名可疑用户的评论。
-% 但\emph{com.jhwl.fjxa}的评价表现依然令人生疑，因此，笔者决定使用其他办法检测这几款仿冒应用的评论中是否存在排名欺诈的可能性。
+本研究将\texttt{FRAUDAR}应用在了本研究的好评数据集上，找到了115名可疑用户和13个可疑应用。
+经过比对后，本研究发现，13个可疑应用并不包含仿冒样本，而仿冒应用的所有评论条目中也没有源于那115名可疑用户的评论。
+% 但\emph{com.jhwl.fjxa}的评价表现依然令人生疑，因此，本研究决定使用其他办法检测这几款仿冒应用的评论中是否存在排名欺诈的可能性。
 % 基于本工作中现有的数据项，进行检测的角度可以分为两个，一个是评论用户可信度，另一个则是评论内容相似度。
 \texttt{FRAUDAR}的工作原理是在二分图中不断删边，从而获得一个紧密子图，这意味着可能潜在的大量假阴性结果（False Positive）。
-为确认\texttt{FRAUDAR}的有效性，本研究提出了另一种排查方法。
+在不确定\texttt{FRAUDAR}有效性的情况下，本研究提出了另一种排查方法与之进行对比。
 
 \subsection{基于评论用户可信度的排名欺诈排查}
 
@@ -194,13 +198,13 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 
 在计算完权重之后，可以分别按其中的两个子权重对应用进行排名，筛选出可能购买了排名欺诈服务的App。
 
-笔者分别将$T_1$设置为0.4，0.6和0.8，尝试对可疑用户进行聚类，结果分别将42,325名给出好评次数大于1的用户分到了10,024，14,520，15,493个聚类中。
+本研究分别将$T_1$设置为0.4，0.6和0.8，尝试对可疑用户进行聚类，结果分别将42,325名给出好评次数大于1的用户分到了10,024，14,520，15,493个聚类中。
 可对这些聚类进行简单分析如下：
 绝大多数聚类中都只有一名用户，即使是在相似度阈值只有0.4的情况下，也只有约7\%的聚类中包含3个或以上的用户（阈值为0.6和0.8时，该比例均为6\%）。
-但是，当挑出包含用户数目大于10的聚类（$T_1$为0.4/0.6/0.8时，这些聚类的占比分别为0.97\%/0.70\%/0.57\%）时，笔者却发现这些聚类分别包含了29,168/23,742/22,218个用户，他们所发布的好评共计分别有98,226/80,492/73,422条。
-因此笔者推定，有一部分用户的行为模式相当近似且可疑，本文将会把这部分用户组成的群体看作是疑似的排名欺诈用户群体（$G_r$）。
+但是，当挑出包含用户数目大于10的聚类（$T_1$为0.4/0.6/0.8时，这些聚类的占比分别为0.97\%/0.70\%/0.57\%）时，这些聚类却分别包含了29,168/23,742/22,218个用户，他们所发布的好评共计分别有98,226/80,492/73,422条。
+由此可推定，有一部分用户的行为模式相当近似且可疑，本文将会把这部分用户组成的群体看作是疑似的排名欺诈用户群体（$G_r$）。
 
-接下来，笔者分别计算了不同$T_1$下，三款仿冒应用在\autoref{equ:usr_cre4}和\autoref{equ:usr_cre5}中的两个权重，即三款应用中的好评用户占可疑用户的比例、以及其好评占所有可疑用户发布的好评的比例。
+接下来，本研究分别计算了不同$T_1$下，三款仿冒应用在\autoref{equ:usr_cre4}和\autoref{equ:usr_cre5}中的两个权重，即三款应用中的好评用户占可疑用户的比例、以及其好评占所有可疑用户发布的好评的比例。
 对于本章研究的三个仿冒应用，其两个子权重的结果分别展示在\autoref{table:usr-cred-res-1}和\autoref{table:usr-cred-res-2}中。
 
 \begin{table}[htbp]
@@ -248,7 +252,7 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 \subsection{基于评论内容相似度的排名欺诈排查}
 上节的方法带来了相对可信的结果，但同时也导致了庞大的运算任务。
 为了减小运算量，提高排查速度，本研究提出了利用评论内容相似度排查排名欺诈的方法。
-根据笔者的经验，在排名欺诈相关的评论通常具有很高的相似性，甚至一模一样，导致那些购买排名欺诈服务的应用中有很多相似甚至相同的评论。
+根据经验，在排名欺诈相关的评论通常具有很高的相似性，甚至一模一样，导致那些购买排名欺诈服务的应用中有很多相似甚至相同的评论。
 所以，可以通过计算应用内相似评论的比率以筛选可能购买了排名欺诈服务的应用。
 
 \begin{Def}
@@ -305,7 +309,7 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 \end{table}
 
 \autoref{table:cmt-simi-res}提供了三款仿冒应用的评论重合率和在两组数据中的排名情况。
-在``50''数据组的511个应用中，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}分别排名58和66（前11\%和前13\%），而在``100''数据组的455个应用中，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}的排名是57和65（前13\%和前14\%），都算是比较靠前的位置。
+在``50''数据组的511个应用中，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}分别排名58和66（前11\%和前13\%），而在``100''数据组的455个应用中，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}的排名是57和65（前13\%和前14\%），均十分靠前。
 而且，只看评论重合率，两款应用的数值都超过了44\%，相当于约每五条评论中就有两条十分类似的评论，这表明上述两款应用很有可能使用了排名欺诈。
 \emph{com.sscwap}相对靠后的排名和较低的重合率说明其好评比较多元化，使用排名欺诈服务的可能性比较低。
 上述结果与基于评论用户可信度的排名欺诈排查方法的结果相对一致，说明两种方法效果相当。
@@ -314,7 +318,7 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 \subsection{人工复核}
 
 最后，本研究对\emph{com.arsenal.FunWeather}、\emph{com.jhwl.fjxa}和\emph{com.sscwap}的评论了进行人工复核，验证上述三种方法得到的结果。
-为了方便复核，笔者对每个应用的评论都按内容进行了排序。
+为了方便复核，本研究对每个应用的评论都按内容进行了排序。
 
 \begin{figure}[htbp]
 	\centering
@@ -331,11 +335,11 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 可以看出，\emph{com.jhwl.fjxa}和\emph{com.arsenal.FunWeather}两款App都有明显的评论重复现象。
 而图中对\emph{com.sscwap}的评论虽然看上去也比较近似，但这其实是由于本文按照评论内容对这些评论进行了一次排序。
 如果结合日期数据观察，就能发现这些数据是由用户在比较分散的时间发出的。
-所以说这些看上去稍微类似的评论，并不一定存在关联关系，笔者不倾向于认为这款App购买了排名欺诈服务。
+所以说这些看上去稍微类似的评论，并不一定存在关联关系，本研究不倾向于认为这款App购买了排名欺诈服务。
 反观\autoref{fig:cmt-sample-1}中的评论，有多条长评论高度相似、甚至一模一样，这在真实案例中是不太可能会存在的情况；而\autoref{fig:cmt-sample-2}中多条近似、相同的评论是在十分接近的时间里被发表的，进一步加深了他们之间存在关联的可能性。
 
 综上，本研究有理由相信这两款仿冒应用的确存在排名欺诈的行为，从而推导仿冒应用与排名欺诈存在关联。
-上述结果也同时说明了本研究提出的两种方法都能有效鉴别出使用了排名欺诈的应用，效果优于现有的部分研究。
+上述结果也同时说明了本研究提出的两种方法都能有效鉴别出使用了排名欺诈的应用，效果优于现有的部分研究：如前述的\texttt{FRAUDAR}只能从本研究的评论数据集中发现15个可疑应用，但根据上一节的实验结果，至少有60个应用很可能存在排名欺诈行为，而本研究中提出的两种验证方法均可将可疑应用有效地筛选出。
 
 本研究还随机抽取了一些发布相同好评的不同用户进行追查，结果发现部分用户在研究收集到的数据集中的评论数只有一到两条，这很有可能是提供排名欺诈服务的商家规避检测的一种策略。
 
@@ -345,4 +349,4 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 
 针对现有研究存在的不足之处，本研究尝试将其他领域的研究方法迁移应用于本次排查中，获得了良好的结果；
 为了进一步优化排查方法，减小运算量，本研究进一步提出了可用于单个应用的排名欺诈排查的方法。
-最后的人工复核证明，无论是基于评论内容相似度的排名欺诈排查方法还是基于用户可信度权重的排查方法，都具有有效性。
+最后的人工复核证明，无论是基于评论内容相似度的排名欺诈排查方法还是基于用户可信度权重的排查方法，都具有有效性，且效果优于现有方法。
