--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -8,21 +8,20 @@
 
 作为世界上最受欢迎的移动操作系统，Android拥有着庞大而完整的应用生态环境，其中不仅包含着带给人便利的各色良性应用，也包含了不怀好意的恶意应用和意图不明的仿冒应用。
 得益于对恶意应用的充分理解，业界实现了对恶意应用的监控；
-但相对地，人们对仿冒应用所知无几，业界对其的认识匮乏则很可能会成为隐患。
-在尚未有前人进行系统研究的情况下，对仿冒应用进行调研十分有必要。
+而前期调研结果表示，学术界尚未有针对仿冒应用进行的研究，对仿冒应用的认识匮乏将带来隐患。
 
-为了获得关于仿冒应用的第一手资料，本文直接从业界收集数据入手分析，完成本次大规模实证研究。
-针对现有爬虫框架不能定向爬取的问题，笔者设计实现了仿冒应用收集框架\mytool ，进行了仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
-其次，基于收集到的数据，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角，结合实例分析，进行了首次基于Android系统仿冒应用的全方位特征解读。
-进一步地，为验证仿冒应用和移动黑灰产的另一个环节---排名欺诈之间是否存在联系，本文收集了仿冒应用在应用市场上的评级和评论进行了排名欺诈排查。
+为获得关于仿冒应用的第一手资料，本文采取实证研究的方式，直接从工业界收集数据以分析仿冒应用。
+针对现有爬虫框架不能定向爬取的问题，本文设计实现了仿冒应用收集框架\mytool ，进行了仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
+基于该数据集，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角，结合案例分析，进行了首次基于Android系统仿冒应用的全方位特征解读。
+进一步地，为验证仿冒应用和移动黑灰产的另一个环节---排名欺诈之间是否存在联系，本文收集了仿冒应用在应用市场上的评级和评论，进行了排名欺诈排查。
 针对现有排名欺诈检测方法的不足，本文先后提出两种方法创新性地对所得数据进行检测。
 
-研究结果方面，在数据收集上，本文使用\mytool 共收集到了超过15万个数据条目，其中每个数据条目代表一个应用样本。
-利用这些样本对仿冒应用进行特征解读，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，相关的案例分析更暴露出了仿冒作者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
+在数据收集方面，本文使用\mytool 共收集到了近14万个数据条目，其中每个数据条目代表一个应用样本。
+在特征解读方面，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，相关的案例分析更暴露出了仿冒应用开发者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
 这些信息都有助于对仿冒应用进行理解。
-评论分析方面，结合人工复核，本文确认了提出的两种检测方法都具有良好的效果，而仿冒应用中确实存在排名欺诈行为。
+评论分析方面，结合人工复核，本文确认了提出的两种检测方法均有效，亦验证了仿冒应用中存在排名欺诈行为。
 
 综上，本文分别从仿冒应用特征解读和仿冒应用评论分析两个方面完成了具有创新性的研究。
-作者希望能借助本文提供的数据和分析结果，提供一个面向仿冒应用及其生态的清晰视角。
+本文希望能借助本文提供的数据和分析结果，提供一个面向仿冒应用及其生态的清晰视角。
 
 \sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析, 排名欺诈}
