--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -9,35 +9,35 @@
 As the most popular mobile operating system in the world, Android owns a huge and complete application ecosystem, in which not only all kinds of benign apps that offer people convenience but also malware with vicious intention and fake apps with unknown purposes are included.
 % 得益于对恶意应用的充分理解，业界实现了对恶意应用的监控；
 Thanks to our full understanding of malware, it is now possible to monitor malware on the industrial level.
-% 但相对地，人们对仿冒应用所知无几，业界对其的认识匮乏则很可能会成为隐患。
-Comparatively, however, we barely know anything about fake apps, which may actually become a snake in the grass.
-% 在尚未有前人进行系统研究的情况下，对仿冒应用进行调研十分有必要。
-Without any previous study, to conduct research on fake apps is necessary.
+% 而前期调研结果表示，学术界尚未有针对仿冒应用进行的研究，对仿冒应用的认识匮乏将带来隐患。
+Preliminary investigation indicates, however, that there is no study in academia aims at fake apps so far.
+The lack of corresponding knowledge could lead to hidden dangers.
 
-% 为了获得关于仿冒应用的第一手资料，本文直接从业界收集数据入手分析，完成本次大规模实证研究。
-In order to obtain the first-hand data about fake apps, we directly dive into the industry to collect data and finish this large-scale empirical study.
+% 为获得关于仿冒应用的第一手资料，本文采取实证研究的方式，直接从工业界收集数据以分析仿冒应用。
+In order to obtain the first-hand data about fake apps, this study adapt the methodology of empirical study and glean data directly from the industry.
 % 针对现有爬虫框架不能定向爬取的问题，笔者设计实现了仿冒应用收集框架\mytool ，进行了仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
-Considering the problem that existing crawler frameworks are not able to achieve targeted collection, the author design and implement a fake app filter framework called \mytool whereby the large-scale data collection is done and the fake app data is filed as a dataset.
-% 其次，基于收集到的数据，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角，结合实例分析，对仿冒应用的特征进行解读，完成了领域创新。
-After that, based on the collected data, this paper interprets the characteristics of fake apps from three different perspectives: fake apps' characteristics, factors affecting fake apps' quantity and the developing trends of fake apps.
-Additionally, case studies are attached after each interpretation to provide more details.
+Considering the problem that existing crawler frameworks are not able to achieve targeted collection, this paper design and implement a fake app filter framework called \mytool whereby the large-scale data collection is done and the fake app data is filed as a dataset.
+% 基于该数据集，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角，结合案例分析，进行了首次基于Android系统仿冒应用的全方位特征解读。
+Based on the filtered dataset, this paper interprets the characteristics of fake apps from three different perspectives: fake apps' characteristics, factors affecting fake apps' quantity and the developing trends of fake apps.
+Additionally, case studies are attached after each perspective, completing the first interpretation on Android fake apps.
 % 进一步地，为验证仿冒应用和移动黑灰产的另一个环节---排名欺诈之间是否存在联系，本文收集了仿冒应用在应用市场上的评级和评论进行了排名欺诈排查。
 One step further, in order to verify whether fake apps interact with another chain in the mobile underground industry --- ranking fraud, this paper conducts a series the ranking fraud detection using the fake apps' ranking and comment data retrieved from an app market.
 % 针对现有排名欺诈检测方法的不足，本文先后提出两种方法创新性地对所得数据进行检测。
 Aim to the drawbacks of existing detecting methods, this paper proposes two innovative approaches to complete the detection.
 
-% 研究结果方面，在数据收集上，本文使用\mytool 共收集到了超过15万个数据条目，其中每个数据条目代表一个应用样本。
-In terms of the result of data collection, this study obtains more than 150,000 data entries leveraging \mytool, where one entry represents an app sample.
-% 利用这些样本对仿冒应用进行特征解读，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，之后的案例分析更暴露出了仿冒作者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
-Interpreting the characteristics of fake apps with these samples, this paper learns knowledge like fake apps' naming tendency and the strategies the fake app developers deploy to evade app markets' regulatory mechanisms.
-What's more, the case-studies expose the fact that fake app developers counterfeit different apps in different forms and app markets lack cooperative supervision.
+% 在数据收集方面，本文使用\mytool 共收集到了近14万个数据条目，其中每个数据条目代表一个应用样本。
+In terms of data collection, this study obtains approximately 140,000 data entries leveraging \mytool, where one entry represents an app sample.
+% 在特征解读方面，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，相关的案例分析更暴露出了仿冒应用开发者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
+In terms of characteristic interpretation, this paper provides knowledge like fake apps' naming tendency and the strategies the fake app developers deploy to evade app markets' regulatory mechanisms.
+What's more, our case-studies expose the fact that fake app developers counterfeit different apps in different forms and app markets lack cooperative supervision.
 % 这些信息都有助于对仿冒应用进行理解。
 All the information above does help in understanding fake apps.
-% 评论分析方面，结合人工复核，本文确认了提出的两种检测方法都具有良好的效果，而仿冒应用中确实存在排名欺诈行为。
-On the user feedback analysis side, manual inspection infers that our two innovative detecting approaches are both effective, meanwhile, fake app developers do utilize ranking fraud to boost their rank.
+% 评论分析方面，结合人工复核，本文确认了提出的两种检测方法均有效，亦验证了仿冒应用中存在排名欺诈行为。
+In terms of comment analysis, manual inspection infers the proposed two innovative detecting approaches are both effective.
+Meanwhile, this study confirms that fake app developers do utilize ranking fraud to boost their rank.
 
 % 综上，本文分别从仿冒应用特征解读和仿冒应用评论分析两个方面完成了具有创新性的研究。
-This paper completes an innovative study from two aspects, namely fake apps characteristics Interpretation and fake apps user feedback analysis.
+In summary, this paper completes an innovative study from two aspects, namely fake apps characteristics Interpretation and fake apps' comment analysis.
 % 作者希望能借助本文提供的数据和分析结果，提供一个面向仿冒应用及其生态的清晰视角。
 Hopefully, this paper can provide a clear vision toward the fake app and its nature through the data and analysis provided.
 
