--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -28,7 +28,8 @@
 
 \usepackage{indentfirst,latexsym,colortbl,clrscode}
 
-\usepackage[linesnumbered,ruled,vlined,resetcount,algochapter]{algorithm2e}%[ruled,vlined]{
+% sudo code related.
+\usepackage[linesnumbered,ruled,vlined,resetcount,algochapter]{algorithm2e}
 \usepackage{algorithmicx}
 \usepackage{listings}
 \usepackage{algcompatible}
@@ -165,14 +166,16 @@
 \newcommand{\Line}[1]{ \textit{ Line .#1}}
 
 % 匿名开关
-\newcommand{\anonymous}[1]{\phantom{ #1 }}
+% \newcommand{\anonymous}[1]{\phantom{ #1 }}
 
 % 查重开关
 % \newcommand{\duplicationCheck}[1]{\phantom{ #1 }}
 
 % 查重自带匿名
 \ifdefined \duplicationCheck
-    \newcommand{\anonymous}[1]{\phantom{ #1 }}
+    \ifx \anonymous \undefined
+        \newcommand{\anonymous}[1]{\phantom{ #1 }}
+    \fi
 \fi
 
 % 基本信息
@@ -345,7 +348,7 @@
 
 % 参考文献
 % 前置\cleardoublepage\phantomsection 以确保目录超链接到正确页码
-\cleardoublepage\phantomsection\addcontentsline{toc}{chapter}{\small{参考文献}}
+\phantomsection\addcontentsline{toc}{chapter}{\small{参考文献}}
 \bibliographystyle{GBT7714-2005}
 \bibliography{bib/REFERENCE}
 \clearPaperPage
